# tileson

./: CMakeLists.txt  CONTRIBUTION.md  README.md
cmake/in/: tileson.pc.in  tilesonConfig.cmake.in
examples/sfml/: SfmlDemoManager.cpp  SfmlDemoManager.h
include/tiled/: Layer.hpp  Map.hpp  Tile.hpp  Tileset.hpp
single_include/: tileson.hpp  tileson_min.hpp
src/tileson/: tileson_parser.hpp
src/tileson/common/: Lzma.hpp  tileson_forward.hpp
src/tileson/json/: Gason.hpp  Json11.hpp  NlohmannJson.hpp  PicoJson.hpp
src/tileson/objects/: ProjectFolder.hpp
src/tileson/tiled/: Project.hpp  Tile.hpp
tests/: CMakeLists.txt  tests_animation.cpp  tests_benchmarks.cpp  tests_compression_or_encoding.cpp  tests_interfaces.cpp  tests_main.cpp  tests_objects.cpp  tests_projects_and_worlds.cpp  tests_reported_issues.cpp  tests_tiled_gason.cpp  tests_tiled_json11.cpp  tests_tiled_nlohmann.cpp  tests_tiled_picojson.cpp
tools/: amalgamate_script.bat  amalgamate_script.sh
